# tradeeon-FE-BE-12-09-2025

./: .dockerignore  .gitignore  ADD_GITHUB_SECRETS_STEP_BY_STEP.md  ADD_HTTPS_LISTENER.md  ADD_JWT_SECRET_MANUAL.md  ADD_TERRAFORM_SECRETS.md  ADVANCED_FEATURES_COMPUTABILITY_ASSESSMENT.md  AGENDA_FIX_DCA_BOT.md  ALERT_COST_SAVINGS_EXAMPLE.md  ALERT_DIFFERENT_CONDITIONS_EXAMPLE.md  ALERT_RUNNER_CONFIRMED_WORKING.md  ALERT_RUNNER_DEPLOYMENT_FIX.md  ALERT_RUNNER_STATUS_AND_FIX.md  ALERT_RUNNER_WORKING.md  ALERT_SYSTEM_COST_SAVINGS_SUMMARY.md  ALERT_SYSTEM_INTEGRATION_GUIDE.md  ALERT_SYSTEM_SETUP_SUMMARY.md  ALERT_VS_LIVE_COMPUTE_COMPARISON.md  ALL_FIXES_COMPLETE.md  ARCHITECTURE_CLARIFICATION.md  AUTHENTICATION_ARCHITECTURE.md  AUTH_FLOW_DIAGNOSIS.md  AWS_BACKEND_DATABASE_CHECK.md  AWS_CLEANUP_GUIDE.md  AWS_COMPLETE_DEPLOYMENT_GUIDE.md  AWS_CREDENTIALS_EXPLAINED.md  AWS_DEPLOYMENT_COMPLETE.md  AWS_DEPLOYMENT_DECISION.md  AWS_DEPLOYMENT_FINAL_SUMMARY.md  AWS_DEPLOYMENT_SUMMARY.md  AWS_ECS_DEPLOYMENT_GUIDE.md  AWS_IAM_PERMISSIONS_FIX.md  AWS_QUICK_START.md  AWS_S3_CLOUDFRONT_DEPLOYMENT.md  AWS_SIMPLIFIED_HOSTING_PLAN.md  AWS_WAF_PRICING.md  BACKEND_BOT_FIXES.md  BACKEND_DATABASE_FIX.md  BETWEEN_OPERATOR_IMPLEMENTATION.md  BINANCE_API_REFERENCE.md  (+607 more)
.github/workflows/: build-and-push-backend.yml  db-backup.yml  deploy-alert-runner.yml  deploy-all-simple.yml  deploy-all.yml  deploy-backend-lightsail.yml  deploy-backend.yml  deploy-frontend.yml  deploy-infrastructure.yml  deploy-railway.yml  security-scans.yml  test-rls.yml
apps/alerts/: README.md  WEBHOOK_SECURITY.md  alert_manager.py  dispatch.py  runner.py  test_alert_system.py
apps/api/: README.md  README_alerts_api.md  binance_authenticated_client.py  binance_client.py  execute_migration_direct.py  main.py  pyproject.toml  run_audit_migration.py  run_migration.py  run_migration_final.py  setup_database.py  simple_alerts.py  test_alert.py  test_db_connection.py  test_indicators.py  verify_migration.py
apps/api/clients/: supabase_client.py
apps/api/middleware/: rate_limiting.py
apps/api/modules/alerts/: alert_manager.py  dispatch.py  runner.py  test_alert_system.py  test_runner.py
apps/api/modules/bots/: __init__.py
apps/api/routers/: alerts.py  bots.py  condition_registry.py  connections.py  dashboard.py  indicators.py  market.py  orders.py  portfolio.py
apps/api/services/: alerts_service.py  channel_service.py
apps/api/tests/: test_rls_alerts.py
apps/api/tradeeon_api.egg-info/: SOURCES.txt  requires.txt
apps/api/utils/: encryption.py  errors.py
apps/bots/: alert_converter.py  bot_action_handler.py  bot_execution_service.py  bot_manager.py  bot_notifier.py  bot_runner.py  condition_evaluator.py  db_service.py  dca_executor.py  emergency_brake.py  entry_condition_converter.py  entry_condition_to_alert.py  event_bus.py  paper_trading.py  profit_taker.py  regime_detector.py  run_bot_notifier.py  run_condition_evaluator.py  support_resistance.py  trading_service.py
apps/frontend/: .env.example  CANVAS_CHART_README.md  CLEAR_CACHE_AND_RESTART.md  DIAGNOSE_ENV_VARS.md  ENV_SETUP.md  FIX_SIGNUP_SIGNIN.md  INDICATORS_INTEGRATION.md  INDICATOR_GUIDE.md  QUICK_FIX.md  SECURITY_FIXES.md  index.html  package-lock.json  package.json  test-supabase-connection.html  vite.config.ts
apps/streamer/: __init__.py  contracts.py  ws_server.py
arbitrage_logs/: executions_20250918_001300.csv  opportunities_20250918_001300.csv  opportunities_20250918_001714.csv  summary_20250918_004452.txt  summary_20250918_004504.txt  summary_20250918_004821.txt  summary_20250918_010039.txt
backend/: evaluator.py
backend/analytics/: main.py  models.py  pyproject.toml  requirements.txt
backend/analytics/core/: cache.py  config.py  math_ops.py
backend/analytics/routers/: metrics.py
backend/analytics/tests/: __init__.py  test_math_ops.py
backend/indicator_engine/: README.md  __init__.py  data_provider.py  main.py  mock_calculator.py  requirements.txt
cloudshell-temp/: Dockerfile  requirements.txt
infra/configs/: env.template
infra/supabase/: schema.sql
infra/terraform/: .gitignore  ARCHITECTURE_SUMMARY.md  DEPLOY_STEPS.md  GET_ZONE_ID_INSTRUCTIONS.md  README.md  check-status.ps1  deploy-complete.ps1  deploy.ps1  get-route53-zone-id.ps1  main.tf  migration-guide.md  terraform.tfvars.example  variables.tf
scripts/: add-cloudfront-security-headers.ps1  add-cloudfront-security-headers.sh  analyze_spreads.py  check_frontend_status.sh  cloudfront-security-headers-policy.json  comprehensive_test_condition_registry.py  portfolio_arbitrage.py  quick_fix_backend.sh  scan_all_pairs.py  scan_enhanced.py  scan_live.py  scan_live_all_paths.py  scan_live_all_stablecoins.py  scan_live_continuous.py  scan_live_depth.py  scan_live_enhanced.py  scan_live_full_coverage.py  scan_live_professional.py  scan_live_working.py  scan_pairs.py  setup-cloudfront-security-headers-simple.ps1  setup-cloudfront-security-headers.ps1  setup-cloudfront-security-headers.sh  setup-cloudfront-waf.ps1  simulate_live.py  simulate_verbose.py  start_phase2_services.sh  test_api_simple.py  test_bot_endpoints.py  test_bot_notifier_imports.py  test_condition_evaluator.py  test_condition_registry.py  test_dca_bot_fixes.py  test_event_bus.py  test_fee_impact.py  test_redis_connection.py  verify-waf-active.ps1  verify_aws_permissions.sh  verify_docker_setup.py  verify_migration.py  (+4 more)
scripts/db/: backup.sh  restore.sh
shared/: enums.py
shared/contracts/: __init__.py
smartbots/: __init__.py
smartbots/arb/: __init__.py  binance_client.py  ledger.py  (+10 more)
(+357 files in other folders)
